finish dark mode

--- a/styles/header.css
+++ b/styles/header.css
@@ -12,7 +12,6 @@
   position: absolute;
   width: 10rem;
   padding: 1rem 1rem;
-  background-color: transparent;
 }
 
 .header {
@@ -25,7 +24,8 @@
 }
 
 body.dark .header {
-  background-color: #1b5a7a;
+  background-color: #1b5a7a78;
+  border: 1px rgba(0, 0, 0, 0.671) solid;
 }
 
 h2 {
@@ -34,11 +34,16 @@ h2 {
   font-style: normal;
   font-size: 1.2rem;
   margin: 1rem 1.5rem;
+  transition: color 0.2s ease-in-out;
 }
 
 h2:hover {
-  color: #1b5a7a;
+  color: #217097a4;
   cursor: pointer;
+}
+
+body.dark h2:hover {
+  color: rgb(5, 5, 5);
 }
 
 .theme-button {
@@ -48,30 +53,35 @@ h2:hover {
   position: absolute;
   top: 0;
   right: 0;
-  width: 2.5rem;
+  width: 2rem;
   height: 2rem;
+  padding: 0;
   margin: 1rem 1rem;
   border: 1px black solid;
   border-radius: 2rem;
   z-index: 1;
+  background-color: white;
   transition: transform 0.3s;
 }
 
 body.dark .theme-button {
-  background-color: black;
-  border: 1px white solid;
+  background-color: #1b5a7a78;
+  border: none;
 }
 
 .theme-button:hover {
   cursor: pointer;
-  transform: scale(1.1);
+  transform: scale(1.13);
 }
 
 .theme-button svg {
-  width: 100%;
-  height: 100%;
+  width: 0.8rem;
+  margin: 1px 1px;
   transition: 1s;
-  margin: 0;
+}
+
+body.dark .theme-button svg {
+  transform: rotate(1turn);
 }
 
 @media (max-width: 776px) {
@@ -86,4 +96,10 @@ body.dark .theme-button {
 }
 
 @media (max-width: 510px) {
+  .theme-button,
+  body.dark .theme-button {
+    border: none;
+    background: none;
+    color: none;
+  }
 }
