--- a/styles/contact.css
+++ b/styles/contact.css
@@ -25,6 +25,7 @@
   margin: 0 1rem;
   padding: 0.5rem 0.5rem;
   border-radius: 50%;
+  transition: background-color 0.4s ease-in-out;
 }
 
 .icons .bi:hover {
