--- a/styles/skills.css
+++ b/styles/skills.css
@@ -5,7 +5,10 @@
 }
 
 .skills-div {
-  padding: 5% 10%;
+  padding-top: 2%;
+  padding-bottom: 10%;
+  padding-left: 5%;
+  padding-right: 5%;
   line-height: 1rem;
   text-align: center;
 }
