--- a/styles/projects.css
+++ b/styles/projects.css
@@ -5,9 +5,13 @@
 }
 
 .projects-div {
-  padding: 5% 10%;
+  padding: 0% 10%;
+  padding-top: 5%;
   line-height: 1rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .projects-div h3 {
@@ -26,6 +30,45 @@
   display: grid;
   grid-template: 1fr / 1fr 1fr;
   gap: 0.7rem;
+  width: 80%;
+}
+
+.grid-div {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  z-index: 0;
+}
+
+main.dark .grid-div {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(-45deg, #111010, #3b336b, #0c6181, #091274);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+}
+
+.grid-div p {
+  position: absolute;
+  top: 1px;
+}
+
+.grid-div a {
+  position: absolute;
+  top: 1px;
+  right: 5px;
+  text-decoration: none;
+  padding: 0.3rem 0.3rem;
+  transition: transform 0.4s ease-in-out;
+}
+.grid-div a:hover {
+  transform: scale(1.4);
+}
+
+.grid {
+  display: flex;
+  justify-content: center;
 }
 
 .main-site {
@@ -33,18 +76,31 @@
 }
 
 .projects-grid div {
-  background-color: rgba(0, 0, 0, 0.047);
   width: 100%;
   height: 20vh;
   background-color: #1b5a7a06;
   border-radius: 0.3rem;
   box-shadow: 0 0 0.3rem #1b5a7a67;
-  text-align: center;
   padding-top: 8rem;
+  transition: box-shadow 0.4s ease-in-out;
 }
 
 .projects-grid div:hover {
-  background-color: #1b5a7a06;
-  background-image: linear-gradient(to right, #1b5a7a0c, #ffffff07, #1b5a7a0c);
-  box-shadow: 0 0 0.3rem #1b5a7a;
+  box-shadow: 0 0 0.7rem #1b5a7a;
+}
+
+.grid-div:hover p {
+  text-decoration: underline;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
