--- a/styles/skills.css
+++ b/styles/skills.css
@@ -13,6 +13,13 @@
   text-align: center;
 }
 
+.skills-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .skills-div h3 {
   font-weight: bold;
   font-size: 1.3rem;
@@ -29,17 +36,28 @@
   align-items: center;
 }
 
+.list ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .list li {
   display: inline-flex;
   background-color: #1b5a7a06;
   margin: 0.2rem 0.4rem;
   padding: 0.4rem 0.8rem;
   border-radius: 1rem;
-  box-shadow: 0 0 0.3rem #1b5a7a;
+  box-shadow: 0 0 0.7rem #1b5a7a;
   transition: box-shadow 0.2s ease-in-out;
+  white-space: nowrap;
 }
+
 .list li:hover {
-  box-shadow: 0 0 0.8rem #1b5a7a;
+  box-shadow: 0 0 1.3rem #1b5a7a;
   cursor: default;
 }
 
